--- a/superduo/alexandria/app/build.gradle
+++ b/superduo/alexandria/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 23
     buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "it.jaschke.alexandria"
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -39,7 +39,9 @@ android {
 
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.google.android.gms:play-services:7.8+'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.google.android.gms:play-services:8.1+'
+    compile 'com.android.support:design:23.0.1'
     compile 'com.android.support:support-annotations:23.1.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
 }
