--- a/superduo/alexandria/app/build.gradle
+++ b/superduo/alexandria/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
     compile 'com.android.support:support-annotations:23.1.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
