--- a/BuildItBigger/backend/src/main/webapp/WEB-INF/web.xml
+++ b/BuildItBigger/backend/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
         <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
         <init-param>
             <param-name>services</param-name>
-            <param-value>io.github.pedrofraca.joketelling.backend.MyEndpoint</param-value>
+            <param-value>io.github.pedrofraca.joketelling.backend.JokeEndpoint</param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
