First version of the initial screen and content provider generated

--- a/Capstone Project/BabyDiary/app/src/main/AndroidManifest.xml
+++ b/Capstone Project/BabyDiary/app/src/main/AndroidManifest.xml
@@ -17,4 +17,9 @@
         </activity>
     </application>
 
+    <provider
+        android:name="io.github.pedrofraca.babydiary.provider.BabyProvider"
+        android:authorities="io.github.pedrofraca.babydiary.provider"
+        android:exported="false" />
+
 </manifest>
